[package]
name = "pup"
description= "A CLI tool for instant pup retrieval."
license = "GPL-3.0-or-later"
repository = "https://github.com/DobromirM/rust-pup"
homepage = "https://dmarinov.com"
keywords = ["dog", "pup", "doggo"]
version = "0.1.0"
authors = ["DobromirM <mr.d.marinov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termimage = "*"
image = "*"
curl = "*"
term_size = "*"
serde_json="*"
duma="*"
clap="*"
failure="*"
url="*"
phf={version = "*", features = ["macros"]}